1943.	[bug]		Set the loadtime after rolling forward the journal.
			[RT #15647]

	--- 9.4.0a3 released ---

1942.	[bug]		If the name of a DNSKEY match that of one in
			trusted-keys do not attempt to validate the DNSKEY
			using the parents DS RRset. [RT #15649]

1941.	[bug]		ncache_adderesult() should set eresult even if no
			rdataset is passed to it. [RT #15642]

1940.	[bug]		Fixed a number of error conditions reported by
			Coverity.

1939.	[bug]		The resolver could dereference a null pointer after
			validation if all the queries have timed out.
			[RT #15528]

1938.	[bug]		The validator was not correctly handling unsecure
			negative responses at or below a SEP. [RT #15528]

1937.	[bug]		sdlz doesn't handle RRSIG records. [RT #15564]

1936.	[bug]		The validator could leak memory. [RT #15544]

1935.	[bug]		'acache' was DO sensitive. [RT #15430]

1934.	[func]		Validate pending NS RRsets, in the authority section,
			prior to returning them if it can be done without 
			requiring DNSKEYs to be fetched.  [RT #15430]

1919.	[contrib]	queryperf: a set of new features: collecting/printing
			response delays, printing intermediate results, and
			adjusting query rate for the "target" qps.

	--- 9.4.0a2 released ---

1933.	[bug]		dump_rdataset_raw() had a incorrect INSIST. [RT #15534]

1932.	[bug]		hpux: LDFLAGS was getting corrupted. [RT #15530]

1931.	[bug]		Per-client mctx could require a huge amount of memory,
			particularly for a busy caching server. [RT #15519]

1930.	[port]		HPUX: ia64 support. [RT #15473]

1929.	[port]		FreeBSD: extend use of PTHREAD_SCOPE_SYSTEM.

1928.	[bug]		Race in rbtdb.c:currentversion(). [RT #15517]

1927.	[bug]		Access to soanode or nsnode in rbtdb violated the
			lock order rule and could cause a dead lock.
			[RT# 15518]

1926.	[bug]		The Windows installer did not check for empty
			passwords.  BINDinstall was being installed in
			the wrong place. [RT #15483]

1925.	[port]		All outer level AC_TRY_RUNs need cross compiling